crates/scheduler/tests/trybuild/fail/serde_flatten.stderr
error: this serde attribute is incompatible with ScheduledTaskParams
 --> tests/trybuild/fail/serde_flatten.rs:6:13
  |
6 |     #[serde(flatten)]
  |             ^^^^^^^
